.provarCaches/00D5f000005vwGkEAI/objects/rstk__wopship__c.object
<CustomObject>
    <description>wopship__c</description>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__wopship_oper__r.rstk__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__wopship_oper__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_cstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_cstohdmtl</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_cstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_cstsublab</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>WO Outside OP Shipments</relationshipLabel>
        <relationshipName>WO_Outside_OP_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolchgoutfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand Freight Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolchgoutlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand Labor  Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolchgoutmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand Mtl Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolchgoutohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand OHD Fringe Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolchgoutohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand OHD Lab Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolchgoutohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand OHD Mach Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolchgoutohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand OHD Mtl Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolchgoutothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand Oth Landed Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolchgoutsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand Sub Lab Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolchgoutsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand Sub Mtl Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolrcvdinfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_dmddolrcvdinfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolrcvdinlab__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_dmddolrcvdinlab</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolrcvdinmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_dmddolrcvdinmtl</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolrcvdinohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_dmddolrcvdinohdfrng</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolrcvdinohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_dmddolrcvdinohdlab</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolrcvdinohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_dmddolrcvdinohdmach</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolrcvdinohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_dmddolrcvdinohdmtl</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolrcvdinothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_dmddolrcvdinothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolrcvdinsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_dmddolrcvdinsublab</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_dmddolrcvdinsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_dmddolrcvdinsubmtl</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_oper__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Operation Number</label>
        <referenceTo>rstk__woordop__c</referenceTo>
        <relationshipLabel>WO Outside OP Shipments</relationshipLabel>
        <relationshipName>WO_Outside_OP_Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_ordno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Number</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>WO Outside OP Shipments</relationshipLabel>
        <relationshipName>WO_Outside_OP_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_qtyship__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_seqno__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>WO Outside OP Shipments</relationshipLabel>
        <relationshipName>WO_Outside_OP_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_srlno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolchgoutfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply Freight Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolchgoutlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply Labor  Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolchgoutmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply Mtl Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolchgoutohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply OHD Fringe Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolchgoutohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply OHD Lab Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolchgoutohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply OHD Mach Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolchgoutohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply OHD Mtl Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolchgoutothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply Oth Landed Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolchgoutsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply Sub Lab Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolchgoutsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply Sub Mtl Dol Shipped Out</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolrcvdinfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_supdolrcvdinfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolrcvdinlab__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_supdolrcvdinlab</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolrcvdinmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_supdolrcvdinmtl</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolrcvdinohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_supdolrcvdinohdfrng</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolrcvdinohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_supdolrcvdinohdlab</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolrcvdinohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_supdolrcvdinohdmach</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolrcvdinohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_supdolrcvdinohdmtl</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolrcvdinothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_supdolrcvdinothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolrcvdinsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_supdolrcvdinsublab</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopship_supdolrcvdinsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wopship_supdolrcvdinsubmtl</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>WO Outside OP Shipment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WO Outside OP Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>